fix: remove extra top blank space on mobile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -86,7 +86,7 @@
 }
 
 /* CSS for small screens (e.g., mobile devices) */
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .navbar-corri-nei-borghi {
     font-size: 15 px; /* Decrease font size */
   }
@@ -98,6 +98,15 @@
   .logo-small {
     width: 50px; /* Decrease logo size */
     transition: none;
+  }
+}
+
+body {
+  padding-top: 60px;
+}
+@media (max-width: 1200px) {
+  body {
+    padding-top: 0px;
   }
 }
 
